fixed sock to socks and changed tab title and logo

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo/opi-logo-no-bg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#166534" />
     <meta
       name="description"
       content="Michigan State Product Gallery"
     />
-    <title>Michigan State Product Gallery</title>
+    <title>College Order Form</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
