--- a/email_template.html
+++ b/email_template.html
@@ -89,7 +89,7 @@
   <!-- FOOTER -->
   <div style="max-width: 600px; margin: auto">
     <p style="color: #999; margin-top: 12px">
-      Sent automatically from the Autofileform system to {{provider_email}}.
+      Sent automatically from the Orderform system to {{provider_email}}.
     </p>
   </div>
 </div> 
