--- a/public/index.html
+++ b/public/index.html
@@ -12,28 +12,8 @@
     />
     <title>College Order Form</title>
     <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
-      // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      // This script checks to see if a redirect is present in the query string,
-      // converts it back into the correct url and adds it to the
-      // browser's history using window.history.replaceState(...),
-      // which won't cause the browser to attempt to load the new url.
-      // When the single page app is loaded further down in this file,
-      // the correct url will be waiting in the browser's history for
-      // the single page app to route accordingly.
-      (function(l) {
-        if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
-            return s.replace(/~and~/g, '&')
-          }).join('?');
-          // Only replace state if the decoded URL is different from current
-          var newPath = l.pathname.slice(0, -1) + decoded + l.hash;
-          if (newPath !== l.pathname + l.search + l.hash) {
-            window.history.replaceState(null, null, newPath);
-          }
-        }
-      }(window.location))
+      // No special redirect handling needed for HashRouter
+      // HashRouter manages all routing via hash fragments
     </script>
   </head>
   <body>
