--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,23 @@
+<!-- orderform/public/404.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Order Form - Page Not Found</title>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/logo/opi-logo-no-bg.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#166534" />
+    <meta
+      name="description"
+      content="College Product Order Form"
+    />
+    <title>College Order Form</title>
+    <script type="text/javascript">
+      // No special redirect handling needed for HashRouter
+      // HashRouter manages all routing via hash fragments
+    </script>
   </head>
   <body>
-    <h1>Page Not Found</h1>
-    <p>The page you're looking for doesn't exist.</p>
-    <p><a href="/orderform/">Go to Order Form</a></p>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html> 
